  - CopyTo/BeginCopyTo/CopyToAsync/DrawInto/BeginDrawInto/DrawIntoAsync methods: Fixing cases when the source and
    the target is the same instance and the source/target rectangles do not overlap.
* BitmapDataFactory class:
  + New Load/BeginLoad/LoadAsync overloads with WorkingColorSpace parameter.
  + New CreateSolid: methods to create read-only solid bitmaps without allocating a buffer.
  + New CreateLinearGradient: methods to create read-only linear gradient bitmaps without allocating a buffer.
  * CreateBitmapData methods: In some overloads some parameters have been made optional.
* ColorExtensions class:
  + New ToGray extension methods with WorkingColorSpace parameter.
  - Fixing GetBrightness(Color64, WorkingColorSpace) method for the linear color space.

* KGySoft.Drawing.Shapes namespace
==================================
* BitmapDataExtensions class:
  + New DrawArc/BeginDrawArc/DrawArcAsync overloads, using SVG-like (and also WPF/UWP/WinUI-like) parameters.
  + New DrawQuadraticCurves/BeginDrawQuadraticCurves/EndDrawQuadraticCurves/DrawQuadraticCurvesAsync methods.
  + New DrawConicCurve/BeginDrawConicCurve/EndDrawConicCurve/DrawConicCurveAsync methods.
  - DrawArc/BeginDrawArc/DrawArcAsync methods:
    - Fixing rendering when the arc's width or height is near to zero.
  * [Begin]DrawLine[Async]/[Begin]DrawBezier[Async]/[Begin]DrawBeziers[Async]/[Begin]DrawPolygon[Async] methods:
    - Fixing possible imprecision of start/end points when DrawingOptions.FastThinLines is enabled, and a line
      segment is partially out of the bitmap bounds.
    - Fixing the precision of start/end points when DrawingOptions.FastThinLines is enabled, and the arc's vertical
      radius is greater than the horizontal radius.
    * Improved thin-line drawing performance
  * DrawPath/BeginDrawPath/DrawPathAsync methods:
    - If a Path contained a complex figure with an arc connected to other path segments, then the possible